--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "src/index.js",
   "scripts": {
     "build": "npx webpack",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "dev": "webpack serve" 
   },
   "keywords": [],
   "author": "",
