--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "javasciptsingleapp",
   "version": "1.0.0",
   "description": "",
-  "homepage": "https://gmayas.github.io/javasciptSingleApp/",  
+  "homepage": "https://javasciptsingleapp.web.app",  
   "main": "src/index.js",
   "scripts": {
     "build": "npx webpack",
-    "deploy": "gh-pages -d dist",
+    "deploy": "firebase deploy",
     "start": "webpack serve" 
   },
   "keywords": [],
