--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "npx webpack",
     "deploy": "firebase deploy",
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "dev": "npx webpack-dev-server"
   },
   "keywords": [],
   "author": "",
