--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "npx webpack-dev-server"
   },
   "keywords": [],
-  "author": "",
+  "author": "GMS",
   "license": "ISC",
   "devDependencies": {
     "bootstrap": "^5.3.3",
